[tool.poetry]
name = "e-schedule"
version = "1.2.1"
description = "e-schedule"
authors = ["Eachin <EachinChung@gmail.com>"]

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
aioredis = "^2.0.1"
APScheduler = "^3.9.1"
pydantic = "^1.9.0"
PyYAML = "^6.0"
aiofile = "^3.7.4"
loguru = "^0.6.0"
orjson = "^3.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
flake8-colors = "^0.1.9"
flake8-pie = "^0.15.0"
isort = "^5.10.1"
black = "^22.3.0"

[tool.black]
line-length = 120
py36 = false
extend-exclude = '''
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | \.local
  | \venv
'''

[tool.isort]
skip_glob = [ "venv/*"]

# 以下配置为保持与 black 兼容
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.10.2"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version [skip ci]"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
